<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chetan.sampleloginapp.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_text"
        android:id="@+id/textView_login"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username_text"
        android:id="@+id/textView_username"
        android:layout_below="@+id/textView_login"
        android:layout_alignRight="@+id/textView2_password"
        android:layout_alignEnd="@+id/textView2_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_user"
        android:layout_alignTop="@+id/textView_username"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password_text"
        android:id="@+id/textView2_password"
        android:layout_below="@+id/textView_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_password"
        android:layout_alignTop="@+id/textView2_password"
        android:layout_alignLeft="@+id/editText_user"
        android:layout_alignStart="@+id/editText_user" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/attempts_text"
        android:id="@+id/textView_attempts"
        android:layout_below="@+id/editText_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView_attempts_count"
        android:layout_alignTop="@+id/textView_attempts"
        android:layout_alignLeft="@+id/editText_password"
        android:layout_alignStart="@+id/editText_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/button_login"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_below="@+id/textView_attempts"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView_seek_bar"
        android:layout_below="@+id/seekBar"
        android:layout_alignRight="@+id/textView_username"
        android:layout_alignEnd="@+id/textView_username" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView_gesture"
        android:layout_below="@+id/textView_seek_bar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <AutoCompleteTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoCompleteTextView"
        android:layout_below="@+id/textView_gesture"
        android:layout_alignLeft="@+id/textView_seek_bar"
        android:layout_alignStart="@+id/textView_seek_bar" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:layout_below="@+id/autoCompleteTextView"
        android:layout_toLeftOf="@+id/button_login"
        android:layout_toStartOf="@+id/button_login" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SHOW TIME"
        android:id="@+id/button_show_time"
        android:layout_alignBottom="@+id/timePicker"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="83dp" />

</RelativeLayout>
